feature: add select character when register

--- a/game/src/app/landing-page/register-dialog/register-dialog.component.css
+++ b/game/src/app/landing-page/register-dialog/register-dialog.component.css
@@ -33,9 +33,26 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 280px;
+    height: 400px;
+    width: 100%;
 }
 
 .btn {
     margin-top: 30px;
+}
+
+.select_hero {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.select_options {
+    padding-top: 30px;
 }
