--- a/game/src/app/landing-page/register-dialog/register-dialog.component.html
+++ b/game/src/app/landing-page/register-dialog/register-dialog.component.html
@@ -22,7 +22,7 @@
         <mat-radio-group aria-label="Select character" [formControl]="characterControl">
 
           <div class="select_hero">
-            <mat-radio-button [value]="i" *ngFor="let character of characterInfo; let i = index">
+            <mat-radio-button [value]="{selectedCharacter: character, index: i}" *ngFor="let character of characterInfo; let i = index">
               <div class="character">
                 <h2>{{character.name}}</h2>
                 <img [src]="character.imgPath" [alt]="character.name">
@@ -36,7 +36,10 @@
 
 
       <div mat-dialog-actions class="btn">
-        <button type="submit" mat-raised-button color="warn" [mat-dialog-close]="nickName"
+        <button type="submit" mat-raised-button color="warn" [mat-dialog-close]="{
+        nickName: this.nickName,
+        selectedHero: this.characterControl.value
+      }"
                 [disabled]="nickNameFormControl.invalid || characterControl.invalid">Ok
         </button>
       </div>
