--- a/game/src/app/play-page/tasks/tasks.component.css
+++ b/game/src/app/play-page/tasks/tasks.component.css
@@ -170,4 +170,9 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.task_btn {
+    width: 87%;
+    height: 75px;
+    font-size: 1.3em;
+}
 
