feature: add material icons

--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -1,5 +1,10 @@
 <app-bar [score]="score"></app-bar>
 <div class="battlefield">
+
+  <button mat-icon-button (click)="openTaskDialog()" class="task_dialog" style="width: 50px; height: 50px">
+    <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">list_alt</mat-icon>
+  </button>
+
   <section class="heroes">
     <app-hero [result]="answer"
               (gameResult)="getResultGame($event)"
