--- a/game/src/app/play-page/tasks/tasks.component.html
+++ b/game/src/app/play-page/tasks/tasks.component.html
@@ -93,4 +93,9 @@
     <button mat-raised-button color="warn" [mat-dialog-close]="getDragResult()">Ok</button>
   </div>
 
+  <button mat-icon-button (click)="closeDialog()" class="hide_btn" style="width: 50px; height: 50px">
+    <mat-icon aria-label="hide dialog" style="font-size: 3em; width: 50px;">cancel</mat-icon>
+  </button>
+
+
 </div>
