feature: add style add levels

--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -1,5 +1,5 @@
 <app-bar [score]="score"></app-bar>
-<div class="battlefield">
+<div class="battlefield" #battlefield>
 
   <button mat-icon-button (click)="openTaskDialog()" class="task_dialog" style="width: 50px; height: 50px">
     <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">list_alt</mat-icon>
