--- a/game/src/app/play-page/bar/bar.component.css
+++ b/game/src/app/play-page/bar/bar.component.css
@@ -1,10 +1,11 @@
 section.health-bar {
+    position: absolute;
     margin: 0;
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 12.3vh;
-    background: black;
+    /* background: black; */
 }
 
 .score span {
