--- a/game/src/app/play-page/play-page.component.css
+++ b/game/src/app/play-page/play-page.component.css
@@ -1,10 +1,15 @@
 .battlefield {
     display: flex;
     align-items: flex-end;
-    width: 100%;
-    height: 83vh;
-    background: url("/assets/battlefield/castle.jpg") no-repeat;
+    /* width: 100%; */
+    /* height: 83vh; */
+    /* background: url("/assets/battlefield/castle.jpg") no-repeat; */
+    /* background-size: cover; */
+
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
 
 }
 
@@ -13,8 +18,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    width: 80vw;
+    width: 80%;
     height: 500px;
+    position: relative;
+    top: 10%;
 }
 
 .task_dialog {
