--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -7,7 +7,7 @@
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">list_alt</mat-icon>
         </button>
       
-        <button mat-icon-button (click)="openTaskDialog()" class="task_dialog" style="width: 50px; height: 50px">
+        <button mat-icon-button (click)="openMusicSettingsDialog()" class="task_dialog" style="width: 50px; height: 50px">
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">settings</mat-icon>
         </button>
   </section>
