--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -17,6 +17,14 @@
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">settings</mat-icon>
         </button>
 
+        
+        <button mat-icon-button (click)="openInfoDialog()" class="task_dialog" style="width: 50px; height: 50px"
+         matTooltip="Help"
+         matTooltipPosition="right"
+        >
+          <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">help_outline</mat-icon>
+        </button>
+
         <button mat-icon-button (click)="onFinishGame()" class="task_dialog" style="width: 50px; height: 50px"
          matTooltip="Finish game"
          matTooltipPosition="right"
