--- a/game/src/shared/components/info-dialog/info-dialog.component.html
+++ b/game/src/shared/components/info-dialog/info-dialog.component.html
@@ -2,7 +2,7 @@
   <slideshow
   #slideshow
   [minHeight]="'506px'"
-  [autoPlay]="true"
+  [backgroundSize] = "'none'"
   [showArrows]="true"
   [imageUrls]="screenshots" class="slideshow">
 </slideshow>
