--- a/game/src/app/play-page/tasks/tasks.component.html
+++ b/game/src/app/play-page/tasks/tasks.component.html
@@ -104,7 +104,7 @@
 
     <div class="result" *ngIf="showResult">
       <div class="alert right-answer" [ngClass]="{'right-answer': isCurrect, 'wrong-answer': !isCurrect}">
-        {{task.result}}
+        {{quizTask.result}}
       </div>
     </div>
 
