--- a/game/src/app/play-page/tasks/tasks.component.css
+++ b/game/src/app/play-page/tasks/tasks.component.css
@@ -188,9 +188,15 @@
 
 .alert {
     padding: .75rem 1.25rem;
-    margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: .25rem;
+    overflow: hidden;
+    max-width: 500px;
+    text-overflow: ellipsis;
+    max-height: 43px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 35px;
 }
 
 .wrong-answer {
@@ -207,4 +213,11 @@
 
 .result {
     margin-top: 20px;
+}
+
+.task-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 130px;
+    justify-content: space-between;
 }
