--- a/game/src/app/play-page/tasks/tasks.component.html
+++ b/game/src/app/play-page/tasks/tasks.component.html
@@ -137,10 +137,9 @@
     <button mat-raised-button color="warn" (click)="closeDragResult()" *ngIf="!showResult">Ok</button>
   </div>
 
-  <button mat-icon-button (click)="closeDialog()" class="hide_btn" style="width: 50px; height: 50px">
+  <button mat-icon-button (click)="closeDialog()" class="hide_btn" style="width: 50px; height: 50px" *ngIf="!showResult">
     <mat-icon aria-label="hide dialog" style="font-size: 3em; width: 50px;">cancel</mat-icon>
   </button>
-
 
 
 </div>
