--- a/game/src/app/landing-page/register-dialog/register-dialog.component.css
+++ b/game/src/app/landing-page/register-dialog/register-dialog.component.css
@@ -9,7 +9,7 @@
     justify-content: center;
     width: 642px;
     height: 742px;
-    background: url('/assets/scroll.png') no-repeat;
+    background: url('https://kirilltk.github.io/DungeonIO/assets/scroll.png') no-repeat;
     box-shadow: none;
 }
 
