--- a/game/src/app/screen-page/screen-page.component.css
+++ b/game/src/app/screen-page/screen-page.component.css
@@ -3,7 +3,7 @@
     align-items: flex-end;
     width: 100%;
     height: 100vh;
-    background: url('/assets/screen_background.jpg') no-repeat;
+    background: url('https://kirilltk.github.io/DungeonIO/assets/screen_background.jpg') no-repeat;
     background-size: cover;
 }
 
