--- a/game/src/app/play-page/tasks/tasks.component.html
+++ b/game/src/app/play-page/tasks/tasks.component.html
@@ -134,11 +134,11 @@
       </div>
     </div>
 
-    <button mat-raised-button color="warn" (click)="closeDragResult()" *ngIf="!showResult">Ok</button>
+    <button mat-raised-button color="warn" (click)="closeDragResult()"*ngIf="!showResult">Ok</button>
   </div>
 
-  <button mat-icon-button (click)="closeDialog()" class="hide_btn" style="width: 50px; height: 50px" *ngIf="!showResult">
-    <mat-icon aria-label="hide dialog" style="font-size: 3em; width: 50px;">cancel</mat-icon>
+  <button mat-icon-button (click)="closeDialog()" class="hide_btn" style="width: 50px; height: 50px">
+    <mat-icon aria-label="hide dialog" style="font-size: 3em; width: 50px;" [ngClass]="{visible: showResult }">cancel</mat-icon>
   </button>
 
 
