fix: fix styles for battlefield

--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -36,7 +36,7 @@
 
 
   <section class="heroes">
-    <app-hero (gameResult)="getResultGame($event)"></app-hero>
+    <app-hero (gameResult)="getResultGame($event)" style="margin:0"></app-hero>
     <app-enemy (gameResult)="getResultGame($event)"></app-enemy>
   </section>
 </div>
