--- a/game/src/app/play-page/play-page.component.html
+++ b/game/src/app/play-page/play-page.component.html
@@ -4,14 +4,14 @@
 
   <section class="actions">
       <button mat-icon-button (click)="openTaskDialog()" class="task_dialog" style="width: 50px; height: 50px"
-      matTooltip="Open casts"
+      matTooltip="Открыть книгу заклинаний"
       matTooltipPosition="right"
       >
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">list_alt</mat-icon>
         </button>
       
         <button mat-icon-button (click)="openMusicSettingsDialog()" class="task_dialog" style="width: 50px; height: 50px"
-        matTooltip="Settings"
+        matTooltip="Настройки"
         matTooltipPosition="right"
         >
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">settings</mat-icon>
@@ -19,14 +19,14 @@
 
         
         <button mat-icon-button (click)="openInfoDialog()" class="task_dialog" style="width: 50px; height: 50px"
-         matTooltip="Help"
+         matTooltip="Помощь"
          matTooltipPosition="right"
         >
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">help_outline</mat-icon>
         </button>
 
         <button mat-icon-button (click)="onFinishGame()" class="task_dialog" style="width: 50px; height: 50px"
-         matTooltip="Finish game"
+         matTooltip="Закончить игру"
          matTooltipPosition="right"
         >
           <mat-icon aria-label="hide dialog" style="font-size: 4em; width: 50px; color: white">meeting_room</mat-icon>
