--- a/game/src/app/screen-page/screen-page.component.html
+++ b/game/src/app/screen-page/screen-page.component.html
@@ -11,7 +11,7 @@
   </slideshow>
 
 
-  <button mat-raised-button color="warn" class="back-btn" (click)="back()">Back</button>
+  <button mat-raised-button color="warn" class="back-btn" (click)="back()">Назад</button>
 
 
 </div>
