--- a/game/src/app/landing-page/register-dialog/register-dialog.component.css
+++ b/game/src/app/landing-page/register-dialog/register-dialog.component.css
@@ -14,18 +14,18 @@
 }
 
 .dialog  input {
-    font-size: 1.5em;
-    font-family: DwarvenAxe, serif;
+    font-size: 1.2em;
+    font-family: 'Lato', sans-serif;
 }
 
 .title {
-    font-size: 2.5em;
-    font-family: DwarvenAxe, serif;
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
 }
 
 button {
-    font-size: 1.5em;
-    font-family: DwarvenAxe, serif;
+    font-size: 1.2em;
+    font-family: 'Lato', sans-serif;
     margin: 0 auto;
 }
 
