--- a/game/src/app/play-page/bar/bar.component.css
+++ b/game/src/app/play-page/bar/bar.component.css
@@ -85,4 +85,7 @@ section.health-bar {
 
 .character-information > span {
     width: 50%;
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+    padding-top: 5px;
 }
