--- a/game/src/shared/components/finish-game/finish-game.component.html
+++ b/game/src/shared/components/finish-game/finish-game.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Hi {{data}}</h1>
+<h1 mat-dialog-title>Привет {{data}}</h1>
 <div mat-dialog-content>
-  <p>Do you want to finish game?</p>
+  <p>Хотите выйти из игры?</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="false">No</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
+  <button mat-button [mat-dialog-close]="false">Нет</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Да</button>
 </div>
