--- a/game/src/app/play-page/tasks/tasks.component.css
+++ b/game/src/app/play-page/tasks/tasks.component.css
@@ -12,7 +12,7 @@
 .table-tasks {
     display: grid;
     grid-template-columns: 320px 320px;
-    grid-template-rows: 180px 180px 180px;
+    grid-template-rows: 90px 90px 90px 90px;
     justify-content: center;
     align-content: center;
     align-items: center;
@@ -177,7 +177,7 @@
 .task_btn {
     width: 87%;
     height: 75px;
-    font-size: 1.3em;
+    font-size: 2rem;
 }
 
 
