--- a/game/src/app/play-page/dialog/dialog.component.css
+++ b/game/src/app/play-page/dialog/dialog.component.css
@@ -5,7 +5,7 @@
     justify-items: center;
     width: 642px;
     height: 742px;
-    background: url('/assets/scroll.png') no-repeat;
+    background: url('https://kirilltk.github.io/DungeonIO1/assets/scroll.png') no-repeat;
     box-shadow: none;
     overflow: hidden;
     color: white;
