--- a/game/src/app/application-page/application-page.component.html
+++ b/game/src/app/application-page/application-page.component.html
@@ -1,13 +1,13 @@
 <section class="music">
     <button mat-icon-button (click)="playTheme()" class="task_dialog" style="width: 50px; height: 50px"
-    *ngIf="turnOnMusic"
-    matTooltip="Music on"
+    *ngIf="!turnOnMusic"
+    matTooltip="Выкл музыку"
     matTooltipPosition="right"
     > <mat-icon aria-label="hide dialog" style="font-size: 5em; width: 50px; color: white">volume_down</mat-icon></button>
     
     <button mat-icon-button (click)="playTheme()" class="task_dialog" style="width: 50px; height: 50px"
-    *ngIf="!turnOnMusic"
-    matTooltip="Music off"
+    *ngIf="turnOnMusic"
+    matTooltip="Вкл музыку"
     matTooltipPosition="right"
     > <mat-icon aria-label="hide dialog" style="font-size: 5em; width: 50px; color: white">volume_off</mat-icon></button>
 
